# Lisdo

./: .gitignore  AGENTS.md  AI Task Inbox Bilingual Brief.md  LICENSE  README.md  README.zh-CN.md  project.yml
.github/: FUNDING.yml
.github/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v1.0.0.md
.github/workflows/: macos-release.yml
Apps/Shared/: AdvancedDraftProviders.swift  DefaultCategorySeeder.swift  DraftProviderFactory.swift  KeychainCredentialStore.swift  LisdoAccountSessionService.swift  LisdoBackendClient.swift  LisdoCaptureModePreferences.swift  LisdoCoreAliases.swift  LisdoDesign.swift  LisdoDraftPipeline.swift  (+9 more)
Backend/lisdo-api/: .gitignore  Makefile  README.md  pyproject.toml  requirements-lambda.txt
Backend/lisdo-api/src/lisdo_api/: __init__.py  apple_auth.py  billing.py  config.py  email.py  entitlements.py  lambda_handler.py  providers.py  quota.py  storekit.py  stripe_checkout.py
Backend/lisdo-api/tests/: conftest.py  test_api_gateway_contract.py  test_billing.py  test_email_contract.py  test_entitlements.py  test_provider_config.py  test_provider_contract.py  test_quota_contract.py  test_stripe_checkout_contract.py
Configs/: Lisdo.storekit  validate_storekit_setup.swift
Design/: Lisdo standalone.html
Website/: account.html  appcast.xml  config.js  index.html  privacy.html  robots.txt  script.js  security.html  sitemap.xml  styles.css  support.html  updates.html
docs/: architecture.md  design.md  macos-release.md  roadmap.md
script/: deploy_cloudflare_worker_appcast.sh  generate_mac_appcast.py  package_mac_release.sh
(+69 files in other folders)
