[project]
name = "lisdo-api"
version = "0.1.0"
description = "AWS Lambda API skeleton for the Lisdo managed backend."
requires-python = ">=3.11"
dependencies = [
    "app-store-server-library==3.1.0",
    "stripe>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [
    "src",
    ".",
]
testpaths = [
    "tests",
]
